# Grasslandia

./: .gitattributes  Cargo.toml  README.md  flake.nix
assets/game/: splashes.txt
assets/game/fights/monkey/attacks/: fireball_demo.txt
assets/game/levels/: level0.glevel  level0.txt  level1.txt  level2.glevel  level3.txt  level4.txt  level5.txt  level6.glevel  level7.txt  level8.glevel  levelA0.glevel  levelA1.glevel  levelB.txt
assets/unused/Loops/: Regret.m4a  chili_chili.wav.m4a  ghost_town.wav.m4a  happynot.wav.m4a  homesweethome.wav.m4a  surprise.wav.m4a
assets/unused/Other/: care.wav-1.m4a  care_boss.wav-1.m4a  care_end.wav-1.m4a  monkey_dialogue.txt
assets/unused/Songs/: Adventure.m4a  Basement.m4a  Exporation.m4a  Grasslandia.m4a  Ice Kingdom.m4a  Idun's Battle.m4a  Library.m4a  ManyRegrets.m4a  Reverie.m4a  Sad Song.m4a  Shadows.m4a  Something Broken.m4a  Stars.m4a  Strange Circumstances.m4a  Will - Aquatic Draft.m4a  Will - Kinetic.m4a  Will - Lucid.m4a  Will - Luminous.m4a  Will - Seismic Draft.m4a  boss.m4a  coffeeshop.wav.m4a  finalboss_draft.wav.m4a  finalboss_intro.wav.m4a  saved.wav.m4a  secret_lab.wav.m4a
assets/unused/Sprites/GhostBoy/: Creepy.m4a
assets/unused/Sprites/Idun/: Desert.m4a
src/: level.rs  main.rs  main_menu.rs
