[package]
name = "Grasslandia"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
env_logger = "0.8.3"
log = "0.4.14"

[dev-dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }