[package]
name = "Grasslandia"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bevy = "0.5.0"
bevy_tilemap = "0.4.0"
env_logger = "0.8.3"
itertools = "0.10.0"
log = "0.4.14"
ndarray = "0.15.2"
rand = "0.8.3"

[dev-dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
